--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Starter Snowpack App" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
-    <title>Starter Snowpack App</title>
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32" />
+    <link rel="shortcut icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16" />
+    <meta name="description" content="Herebris" />
+    <title>Herebris</title>
 </head>
 <body>
-<h1>Welcome to Snowpack!</h1>
 <div id="root"></div>
 <script type="module" src="/index.js"></script>
 </body>
